Common/MbaInterface.h

enum CANFRAME_FLAG
{
    CANFRAME_FLAG_NONE      = 0x0u,     ///< No flags
    CANFRAME_FLAG_EXTENDED  = 0x1u,     ///< Frame has extended bit set
    CANFRAME_FLAG_FD        = 0x2u,     ///< Frame has FD bit set
    CANFRAME_FLAG_BRS       = 0x4u      ///< Frame has BRS bit set
};
enum CAN_MODE
{
    CAN_MODE_CLASSIC,                   ///< Classic CAN
    CAN_MODE_FDNISO,                    ///< CAN-FD using Bosch-CRC
    CAN_MODE_FDISO,                     ///< CAN-FD using ISO-CRC
};
enum CAN_TESTMODE
{
    CAN_TESTMODE_INIT,                  ///< Module init (enters after powercycle)
    CAN_TESTMODE_NORMAL,                ///< Testmode disabled
    CAN_TESTMODE_LISTENONLY,            ///< Listen only, do send ACKs or error frames
    CAN_TESTMODE_LOOPBACK,              ///< Local loopback mode
    CAN_TESTMODE_EXTLOOPBACK,           ///< Extern loopback mode enhances local loopback by enabling frame transmission to the bus. However RX is still disabled and it will not receive ACK or react on error frames.
};
enum CAN_BUS
{
    CAN_BUS_MIN = 0,                    ///< Always returns the first CAN bus
    CAN_BUS_0 = CAN_BUS_MIN,            ///< CAN bus 0
    CAN_BUS_1,                          ///< CAN bus 1
    CAN_BUS_MAX                         ///< Maximum number of CAN busses
};
enum CAN_MSG
{
    CAN_MSG_RX = 0,                     ///< This message describes a successfully received CAN frame. See @ref CanFrame.
    CAN_MSG_TX,                         ///< This message describes a successfully transmitted CAN frame. See @ref CanFrame.
    CAN_MSG_ERR,                        ///< This message describes an error on the bus. See @ref CanError.
    CAN_MSG_DBG,                        ///< This message describes a register read. Reserved.
    CAN_MSG_BITRATE,                    ///< This message describes the CAN bitrate setting. See @ref CanBitrate.
    CAN_MSG_MODE
};
enum MBA_CORE
{
    MBA_RESERVED = 0,                   ///< Reserved
    MBA_TIMESTAMP,                      ///< Get the current time of the MBA. Callback is invoked with data containing a uint64_t timestamp in usec since powerup of the MBA.
    MBA_VERSION,                        ///< Get the software version of the MBA. Callback is invoked with data containing a @ref mba_version_t pointer.
    MBA_USBERROR,                       ///< Libusb error container. Callback is invoked with data containing a libusb_transfer_status enum value.
    MBA_DEVICEDISCONNECTED,             ///< When a hotplug disconnect has happened. Callback is invoked with data set to 0.
    MBA_DEVICERECONNECTED               ///< When a previously configured device has been disconnected and is reconnecting now. Callback is invoked with data set to 0.
};
enum MBA_RESET
{
    MBA_RESET_APPLICATION = 0,          ///< Reset MBA
    MBA_RESET_BOOTLOADER                ///< Reset MBA and stay in bootloader
};
enum MBA_CMD
{
    MBA_CORE = 0,                       ///< MBA command, see @ref MBA_MSG
    MBA_CAN,                            ///< CAN message, see @ref CAN_MSG
};
struct mba_handle_t;
struct CanError
{
    uint32_t busId;                     ///< @ref CAN_BUS
    uint8_t busOff;                     ///< Bus off indicator
    uint8_t tec;                        ///< Transmit error counter
    uint8_t rec;                        ///< Receive error counter
    uint8_t lec;                        ///< Error code set during arbitration phase. Refer to V71 datasheet for additional information.
    uint8_t dlec;                       ///< Error code set during adata phase. Refer to V71 datasheet for additional information.
    uint64_t timestamp;                 ///< MBA timestamp set on event (read-only)
};
struct mba_serial_t
{
    char octet[40];                    ///< Alphanumeric serial number of the device 
};
struct mba_device_t
{
    uint32_t deviceType;                ///< See @ref MBA_DEVICE
    mba_serial_t serial;                ///< See @ref mba_serial_t
};
/**
 * Definition of the callback function invoked by the driver library.
 * 1. Evaluate message->instance which specifies a unique id based on the order the MBA device handles have been created.
 * 2. Evaluate message->messageType to see if this message is a generic MBA_CORE or MBA_CAN message. See @ref MBA_CMD
 * 3. Evaluate message->command, note that this is depending on the messageType. See @ref MBA_CORE and @ref CAN_MSG.
 * 4. Parse the message->data to the according structure e.g. @ref CanFrame, @ref CanError, etc. Verify the size of the structure matches message->data_length.
 *
 * @param message See @ref mba_message_t
 * @param user_data The pointer specified by @ref registerCallback
 */
typedef void(*tCallback)(const mba_message_t* message, void* user_data);
    /**
    * Unload the MBA interface library.
    * On Windows based devices, unload is implicitly called by when the library is unloaded.
    */
    DLL_EXPORT void unload();
    /**
    * Enumerate all connected MBA devices.
    * A pointer to the list will be stored in device_list parameter. The memory is owned by the library and will be freed when unload() is invoked.
    * @param device_list Pointer to a mba_device_t pointer, which will point to the device list after the function returns successful
    * @result Number of devices available in the list
    * @result 0 if no device is available
    * @result E_ARG if devive_list pointer is invalid
    * @result E_ERR if USB communication failed
    */
    DLL_EXPORT int32_t enumDevices(mba_device_t** device_list);
    /**
    * Open a MBA device based on the serial number.
    * A pointer to the instance will be stored in mba_device parameter.
    * @param mba_device Pointer to a mba_handle_t pointer, which will point to the device handle if the function returns successful
    * @param serial Pointer to a MBA serial returned by @ref enumDevices
    * @result E_OK on success
    * @result E_ARG mba_device or serial pointer are invalid
    * @result E_INIT if the device has been opened already
    * @result E_ERR if USB communication failed
    */
    DLL_EXPORT int32_t openDevice(mba_handle_t** mba_device, const mba_serial_t* serial);
    /**
    * Close a MBA device.
    * @param mba_device Pointer to a mba_handle_t that has been created by calling @ref openDevice
    * @result See @ref E_ERROR
    * @result E_OK on success
    * @result E_ARG if mba_device pointer is invalid.
    */
    DLL_EXPORT int32_t closeDevice(mba_handle_t* mba_device);
    /**
    * Register the callback handler for the MBA library. Only a single callback can be registered.
    * If multiple MBA devices are used, the instance id is provided to the callback function.
    * @param callback Pointer to the callback function that is invoked by the MBA library on any event
    * @param user_data Pointer to user defined data that is passed to the callback on invokation
    * @result See @ref E_ERROR
    * @result E_OK on success
    * @result E_ARG if callback pointer is invalid
    */
    DLL_EXPORT int32_t registerCallback(tCallback callback, void* user_data);
    /**
    * Remove the callback.
    * If the device is not closed, messages may be cached and delivered when a new callback is registered.
    */
    DLL_EXPORT int32_t unregisterCallback();
    /**
    * Send a CAN frame.
    * If a CAN-FD shall be transmitted, it will automatically padded to the next matching frame size, e.g. sending 60 byte will create a 64 byte frame.
    * If the internal CAN Tx fifo of the MBA is full, it will wait for timeout ms and notify via callback if the message still could not be placed in the fifo.
    * When a message has been transmitted successfully or transmission resulted in an error, the callback will be invoked asynchronously.
    * @param mba_device Handle to the device created by @ref openDevice
    * @param busId Index of the CAN bus
    * @param canId CAN frame identifier
    * @param payload Pointer to the CAN frame payload
    * @param dlc Length of the CAN frame payload 
    * @param flags Flags of the CAN frame, see @ref CANFRAME_FLAG
    * @param timeout Transmit timeout in millisecond, maximum value of 1000
    * @result E_OK on success
    * @result E_ARG if mba_device or payload pointer are invalid
    * @result E_DEV when trying to send a CAN frame on incapable hardware
    * @result E_ERR if USB communication failed
    */
    DLL_EXPORT int32_t CAN_SendFrame(mba_handle_t* mba_device, CAN_BUS busId, uint32_t canId, const uint8_t* payload, uint8_t dlc, uint8_t flags, uint16_t timeout);
    /**
    * Set the CAN speed of a channel.
    * If invalid settings are supplied, the speed will default to 500/2000 kBit/s. Sample point is always set to 80%.
    * After invokation, the bit-timing will be returned asynchronously by the callback, see @CAN_GetBitTiming.
    * @param mba_device Handle to the device created by @ref openDevice
    * @param busId Index of the CAN bus
    * @param canSpeed CAN speed, available values are 100, 125, 250, 500 and 1000 kBit/s
    * @param canFdSpeed CAN-FD speed, available values are 1000, 2000, 3077, 4000, 5000, 6667, 8000 kBit/s
    * @result E_OK on success
    * @result E_ARG if mba_device is invalid
    * @result E_DEV when trying to send a CAN frame on incapable hardware
    * @result E_ERR if USB communication failed
    */
    DLL_EXPORT int32_t CAN_SetSpeed(mba_handle_t* mba_device, CAN_BUS busId, uint32_t canSpeed, uint32_t canFdSpeed);
    /**
    * Set the CAN operation mode of a channel.
    * After the modes have been applied to the hardware, the applied settings will be returned asynchronously by the callback.
    * @param mba_device Handle to the device created by @ref openDevice
    * @param busId Index of the CAN bus
    * @param canMode @ref CAN_MODE
    * @param testMode @ref CAN_TESTMODE
    * @param autoRetryEnabled When enabled, MBA will retry to transmit a message when arbitration was lost
    * @result E_OK on success
    * @result E_ARG if mba_device is invalid
    * @result E_DEV when trying to send a CAN frame on incapable hardware
    * @result E_ERR if USB communication failed
    */
    DLL_EXPORT int32_t CAN_SetMode(mba_handle_t* mba_device, CAN_BUS busId, uint8_t canMode, uint8_t testMode, uint8_t autoRetryEnabled);
    /**
    * Reset a CAN bus to init mode
    * @param mba_device Handle to the device created by @ref openDevice
    * @param busId Index of the CAN bus
    * @result E_OK on success
    * @result E_ARG if mba_device is invalid
    * @result E_DEV when trying to send a CAN frame on incapable hardware
    * @result E_ERR if USB communication failed
    */
    DLL_EXPORT int32_t CAN_Reset(mba_handle_t* mba_device, CAN_BUS busId);
    /**
    * Reset the MBA
    * @param mba_device Handle to the device created by @ref openDevice
    * @param resetMode @ref MBA_RESET
    * @result E_OK on success
    * @result E_ARG if mba_device is invalid
    * @result E_ERR if USB communication failed
    */
    DLL_EXPORT int32_t MBA_Reset(mba_handle_t* mba_device, MBA_RESET resetMode);
    /**
    * Query the MBA firmware version
	* Updated versions of the library will return a non negative number when nullptr is passed as argument,
	* this reflects the version of the MBA library. Older versions will return E_ARG error instead.
	* A populated info structure @ref mba_version_t will be received by the callback handler when a valid device was specified.
    * @param mba_device Handle to the device created by @ref openDevice
    * @result E_OK on success
    * @result E_ARG if mba_device is invalid
    * @result E_ERR if USB communication failed
    */
    DLL_EXPORT int32_t MBA_GetVersion(mba_handle_t* mba_device);